--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,10 @@
     <artifactId>SuperMarie</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+
+
+    </dependencies>
+
 
 </project>
